# binapy

./: .gitignore  README.md  pyproject.toml
binapy/: binary.py
tests/: test_binapy.py
