[tool.poetry]
name = "binapy"
version = "0.1.0"
description = """
    Package for binary number manipulation, exercise 
    from https://www.thedigitalcatonline.com/blog/2015/05/13/python-oop-tdd-example-part1/
"""
authors = ["Hildeberto <hildeberto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
black = "^19.10b0"
rope = "^0.16.0"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
